2003-09-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/txt.c (ReadTXTImage): Fix strlen() pointer type warning.
	* magick/image.c (TextureImage): Fixed return with no value warning.
	* magick/color.c (GetColorInfoArray): Decided that the const
	return value was a bad idea.  Therefore, the return type has been
	made non-const.
	* magick/magick.c (GetMagickInfoArray): Decided that the const
	return value was a bad idea.  Therefore, the return type has been
	made non-const.	
	* tests/constitute.c, tests/rwblob.c, tests/rwfile.c : Define
	MAGICK_IMPLEMENTATION since these test programs using some internal
	extensions.
	* configure.ac: Test C++ compiler for __func__ support.
	* magick/log.h: Added GetCurrentFunction() macro to handle
	__func__ support determination.  Re-wrote GetMagickModule() macro
	to use GetCurrentFunction().  Changes should allow compilation of
	Magick++ when the C compiler supports __func__ but the C++
	compiler does not.
	* configure.ac: Changed from using HAS___func__ define to
	HAS_C__func__ since this feature may be language sensitive.
	* locale/C.mgk: Added missing JNGCompressionNotSupported message.

2003-09-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (Generate8BIMAttribute): Fix sscanf argument
	type mis-match.
	* coders/ps3.c (ZLIBEncodeImage): Fix mis-classified
	ZipLibraryIsNotAvailable error report.
	* coders/url.c (RegisterURLImage): Only register URL format
	support if libxml2 is available.
	* coders/msl.c (RegisterMSLImage): Only register MSL format
	support if libxml2 is available.

2003-09-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/histogram.c (WriteHISTOGRAMImage): Remove a useless loop.
	* coders/wpg.c: Applied patch from Fojtik Jaroslav to support
	reading WPGs which use the EXT token.

2003-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/color.c (HistogramToFile): Renamed static method