@@ -1,3 +1,10 @@
+2003-09-04  Lars Ruben Skyum  <lars.skyum@stibo.com>
+
+	* magick/transform.c (ProfileImage): Bugfix: conditional
+	compilation based on LCMS being present or not now works as
+	expected. An exception is thrown if LCMS is not present and
+	profile conversion is used.
+
 2003-09-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/txt.c (ReadTXTImage): Fix strlen() pointer type warning.
